--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const dir = lang === "ar" ? "rtl" : "ltr";
 		<meta name="description" content={description} />
 		<meta
 			name="viewport"
-			content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no"
+			content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1, user-scalable=no, interactive-widget=resizes-visual"
 		/>
 		<link rel="icon" type="image/webp" href="/favicon.webp" />
 		<meta name="theme-color" content="#4b0101" />
